// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[ components / Icons ] > when component is rendered > should render snapshoted Menu Icon 1`] = `
<DocumentFragment>
  <svg
    class="block w-6 text-gray-400"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 6h16M4 12h16M4 18h16"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</DocumentFragment>
`;

exports[`[ components / Icons ] > when component is rendered > should render snapshoted X icon 1`] = `
<DocumentFragment>
  <svg
    class="block w-6 text-gray-400"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 18L18 6M6 6l12 12"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</DocumentFragment>
`;
